220516 HttpServlet, 한글 처리
- HttpServlet의 doGet, doPost 상속 받아서 편하게 구현 가능
- 한글 처리 (코드 상에선 여기까지 완료)

+
doPost에서 한글 처리만 해주고, doGet을 호출하거나
doGet/doPost에서 한글 처리만 한 뒤 아예 다른 메서드 호출하는 방식으로 코드 정리 가능
(한글 처리 += 각자 처리해야 할 일들)

--- a/web13/WebContent/ex06.html
+++ b/web13/WebContent/ex06.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
 </head>
 <body>
 	<h1>ex06 page</h1>
-	<form action="ex07.html" method="get">
+	<a href="#">Get ex08.html</a>
+	<form action="ex08.html" method="post">
+		<input type="text" name="id" id="inputId">
 		<button>이동</button>
 	</form>
+	
+	<script>
+		document.querySelector('a').onclick = function(){
+			var msg = document.getElementById('inputId').value;
+			window.location.href = "/web13/ex08.html?id=" + encodeURIComponent(msg);
+			return false;
+		};
+	</script>
 </body>
 </html>
